- setAvoider bug in template game. - decompile dummy procedures for empty export slots - param names not resolved in asm. - "can't override default selector" error message is now SCI1-aware

--- a/SCICompanion/Files/Decompiler/Decompiler.ini
+++ b/SCICompanion/Files/Decompiler/Decompiler.ini
@@ -26,7 +26,18 @@ display = "theText"
 init = "theClient"
 
 [enums]
-evType = [ "evNULL", "evMOUSEBUTTON", "evMOUSERELEASE", "evMOUSE", "evKEYBOARD", "evJOYSTICK", "evSAID", "evNOJOYSTICK", "evMOUSEKEYBOARD", "evALL_EVENTS" ]
+evType = [ "ev*" ]
+verbType = [ "WALK", "LOOK", "DO", "TALK", "ASK", "HELP" ]
+drawPicAnimation = ["dp*"]
+drawPicClear = ["dpCLEAR", "dpNO_CLEAR"]
  
-[methodParameterValues.pEvent]
-type = [ "evType" ]
+# [methodParameterValues.pEvent]
+# type = [ "evType" ]
+
+# use certain enums when assigning to or comparing to parameters for a function
+[methodParameterTypes]
+doVerb = [ "verbType" ]
+
+# use certain enums when passing parameters to kernel calls
+[kernelParameterTypes]
+DrawPic = [ 0, "drawPicAnimation", "drawPicClear" ]
