- support for knowing properties are bitfields. - support for selectors at callsites - support for defined enums at callsites, for methods and kernels

--- a/SCICompanion/Files/Decompiler/Decompiler.ini
+++ b/SCICompanion/Files/Decompiler/Decompiler.ini
@@ -26,10 +26,11 @@ display = "theText"
 init = "theClient"
 
 [enums]
-evType = [ "ev*" ]
+evType = [ "ev.*" ]
 verbType = [ "WALK", "LOOK", "DO", "TALK", "ASK", "HELP" ]
-drawPicAnimation = ["dp*"]
+drawPicAnimation = ["dp.*"]
 drawPicClear = ["dpCLEAR", "dpNO_CLEAR"]
+rsType = [ "rs.*" ]
  
 # [methodParameterValues.pEvent]
 # type = [ "evType" ]
@@ -37,7 +38,13 @@ drawPicClear = ["dpCLEAR", "dpNO_CLEAR"]
 # use certain enums when assigning to or comparing to parameters for a function
 [methodParameterTypes]
 doVerb = [ "verbType" ]
+firstTrue = [ "selector" ]
+respondsTo = [ "selector" ]
 
 # use certain enums when passing parameters to kernel calls
 [kernelParameterTypes]
-DrawPic = [ 0, "drawPicAnimation", "drawPicClear" ]
+DrawPic = [ "", "drawPicAnimation", "drawPicClear" ]
+Load = [ "rsType" ]
+
+[bitfieldProperties]
+bitfieldProperties = [ "style", "signal", "flags", "modifiers", "scaleSignal", "syncCue", "prevCue", "onMeCheck", "state", "type", "illegalBits" ]
