- fix bug where Joystick appears for PalVary - more enum constants for decompiler.

--- a/SCICompanion/Files/Decompiler/Decompiler.ini
+++ b/SCICompanion/Files/Decompiler/Decompiler.ini
@@ -31,6 +31,11 @@ verbType = [ "WALK", "LOOK", "DO", "TALK", "ASK", "HELP" ]
 drawPicAnimation = ["dp.*"]
 drawPicClear = ["dpCLEAR", "dpNO_CLEAR"]
 rsType = [ "rs.*" ]
+fiType = [ "fi.*" ]
+palType = [ "pal.*" ]
+sndType = [ "snd.*" ]
+grType = [ "gr.*" ]
+pvType = [ "pv.*" ]
  
 # [methodParameterValues.pEvent]
 # type = [ "evType" ]
@@ -45,6 +50,11 @@ respondsTo = [ "selector" ]
 [kernelParameterTypes]
 DrawPic = [ "", "drawPicAnimation", "drawPicClear" ]
 Load = [ "rsType" ]
+FileIO = [ "fiType" ]
+Palette = [ "palType" ]
+PalVary = [ "pvType" ]
+DoSound = [ "sndType" ]
+Graph = [ "grType" ]
 
 [bitfieldProperties]
 bitfieldProperties = [ "style", "signal", "flags", "modifiers", "scaleSignal", "syncCue", "prevCue", "onMeCheck", "state", "type", "illegalBits" ]
