- explicit export tables for scripts - perf issue with browseinfo - divide by zero in compile dialog when aborting.

--- a/SCICompanion/Files/Decompiler/Decompiler.ini
+++ b/SCICompanion/Files/Decompiler/Decompiler.ini
@@ -45,6 +45,7 @@ pvType = [ "pv.*" ]
 doVerb = [ "verbType" ]
 firstTrue = [ "selector" ]
 respondsTo = [ "selector" ]
+eachElementDo = [ "selector" ]
 
 # use certain enums when passing parameters to kernel calls
 [kernelParameterTypes]
