- fix bug where we were putting "fake breaks" in a latch node

--- a/SCICompanion/Files/Decompiler/Decompiler.ini
+++ b/SCICompanion/Files/Decompiler/Decompiler.ini
@@ -36,6 +36,7 @@ palType = [ "pal.*" ]
 sndType = [ "snd.*" ]
 grType = [ "gr.*" ]
 pvType = [ "pv.*" ]
+msgType = [ "msg.*" ]
  
 # [methodParameterValues.pEvent]
 # type = [ "evType" ]
@@ -56,6 +57,7 @@ Palette = [ "palType" ]
 PalVary = [ "pvType" ]
 DoSound = [ "sndType" ]
 Graph = [ "grType" ]
+Message = [ "msgType" ]
 
 [bitfieldProperties]
 bitfieldProperties = [ "style", "signal", "flags", "modifiers", "scaleSignal", "syncCue", "prevCue", "onMeCheck", "state", "type", "illegalBits" ]
