- improve variable define resolution while decompiling (switch and binary ops)

--- a/SCICompanion/Files/Decompiler/Decompiler.ini
+++ b/SCICompanion/Files/Decompiler/Decompiler.ini
@@ -37,9 +37,17 @@ sndType = [ "snd.*" ]
 grType = [ "gr.*" ]
 pvType = [ "pv.*" ]
 msgType = [ "msg.*" ]
+evMsgType = [ "KEY_.*", "JOY_.*" ]
+evModType = [ "em.*" ]
  
-# [methodParameterValues.pEvent]
-# type = [ "evType" ]
+[commonSwitchValueTypes]
+theVerb = "verbType"
+"pEvent.message" = "evMsgType"
+"pEvent.type" = "evType"
+"pEvent.modifiers" = "evModType"
+pEventMessage = "evMsgType"
+pEventType = "evType"
+pEventModifiers = "evModType"
 
 # use certain enums when assigning to or comparing to parameters for a function
 [methodParameterTypes]
