- fix crappy filtering for downscaled pics in pic list view

--- a/SCICompanion/Files/Decompiler/Decompiler.ini
+++ b/SCICompanion/Files/Decompiler/Decompiler.ini
@@ -39,6 +39,7 @@ pvType = [ "pv.*" ]
 msgType = [ "msg.*" ]
 evMsgType = [ "KEY_.*", "JOY_.*" ]
 evModType = [ "em.*" ]
+signalType = [ "notUpd" ,"fixPriOn" ,"isExtra" ,"noTurn" ,"noCycler" ,"ignoreHorizon" , "ignAct" ]
  
 [commonSwitchValueTypes]
 theVerb = "verbType"
@@ -48,6 +49,7 @@ theVerb = "verbType"
 pEventMessage = "evMsgType"
 pEventType = "evType"
 pEventModifiers = "evModType"
+signal = "signalType"
 
 # use certain enums when assigning to or comparing to parameters for a function
 [methodParameterTypes]
