- can't open things from QuickLinks - we weren't writing out methDict selector correctly (essentially eliminating y selector from objects) - fix compile issue when if statement used in addition. - Sort Quick links - use scriptID orignal file name in the results list

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1475,6 +1475,7 @@ BEGIN
     CONTROL         "",IDC_PROGRESS1,"msctls_progress32",PBS_MARQUEE | NOT WS_VISIBLE | WS_BORDER,308,263,207,14
     EDITTEXT        IDC_EDITDEBUGMATCH,174,50,68,14,ES_AUTOHSCROLL
     LTEXT           "SCO:",IDC_INSTRUCTIONS,174,117,18,8
+    CONTROL         "Disassemble only",IDC_CHECKASM,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,174,40,70,10
 END
 
 
