- add constants for MEmory

--- a/SCICompanion/Files/Decompiler/Decompiler.ini
+++ b/SCICompanion/Files/Decompiler/Decompiler.ini
@@ -40,6 +40,7 @@ msgType = [ "msg.*" ]
 evMsgType = [ "KEY_.*", "JOY_.*" ]
 evModType = [ "em.*" ]
 signalType = [ "notUpd" ,"fixPriOn" ,"isExtra" ,"noTurn" ,"noCycler" ,"ignoreHorizon" , "ignAct" ]
+memType = [ "mem.*" ]
  
 [commonSwitchValueTypes]
 theVerb = "verbType"
@@ -68,6 +69,7 @@ PalVary = [ "pvType" ]
 DoSound = [ "sndType" ]
 Graph = [ "grType" ]
 Message = [ "msgType" ]
+Memory = [ "memType" ]
 
 [bitfieldProperties]
 bitfieldProperties = [ "style", "signal", "flags", "modifiers", "scaleSignal", "syncCue", "prevCue", "onMeCheck", "state", "type", "illegalBits" ]
