- progress with message editor

--- a/SCICompanion/Files/Decompiler/Decompiler.ini
+++ b/SCICompanion/Files/Decompiler/Decompiler.ini
@@ -1,6 +1,7 @@
 [methodParameterNames]
 changeState = "newState"
 handleEvent = "pEvent"
+dispatchEvent = "pEvent"
 doVerb = "theVerb"
 newRoom = "newRoomNumber"
 setRegions = "scriptNumbers"
