--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1392,7 +1392,7 @@ IDD_PICHELPER DIALOGEX 0, 0, 130, 285
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_VISIBLE | WS_CLIPCHILDREN | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    LTEXT           "Zoom",IDC_STATIC1,7,7,18,8
+    LTEXT           "Zoom",IDC_STATIC1,7,6,18,8
     CONTROL         "&Visual",IDC_CHECKV,"Button",BS_AUTOCHECKBOX | BS_ICON | BS_PUSHLIKE | WS_TABSTOP,7,113,26,21
     CONTROL         "&Priority",IDC_CHECKP,"Button",BS_AUTOCHECKBOX | BS_ICON | BS_PUSHLIKE | WS_TABSTOP,35,113,26,21
     CONTROL         "&Control",IDC_CHECKC,"Button",BS_AUTOCHECKBOX | BS_ICON | BS_PUSHLIKE | WS_TABSTOP,63,113,26,21
@@ -1483,12 +1483,44 @@ IDD_MESSAGETOOLBOX DIALOGEX 0, 0, 117, 277
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_CLIPCHILDREN | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CTEXT           "Room nouns:",IDC_STATIC1,7,24,96,11
-    CTEXT           "Room conditions:",IDC_STATIC2,7,157,96,11
-    CONTROL         "",IDC_LISTNOUNS,"SysListView32",LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,36,103,109
-    CONTROL         "",IDC_LISTCONDITIONS,"SysListView32",LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,170,103,100
-    PUSHBUTTON      "Verbs",IDC_GOTOVERBS,7,7,44,14
-    PUSHBUTTON      "Talkers",IDC_GOTOTALKERS,66,7,44,14
+    LTEXT           "Verbs:",IDC_STATIC1,7,11,49,11
+    LTEXT           "Talkers:",IDC_STATIC2,7,157,55,11
+    CONTROL         "",IDC_LISTVERBS,"SysListView32",LVS_REPORT | LVS_EDITLABELS | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,7,25,103,120
+    CONTROL         "",IDC_LISTTALKERS,"SysListView32",LVS_REPORT | LVS_EDITLABELS | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,7,170,103,100
+    PUSHBUTTON      "Add verb",IDC_BUTTONADDVERB,64,7,46,14
+    PUSHBUTTON      "Add talker",IDC_BUTTONADDTALKER,64,154,47,14
+END
+
+IDD_MESSAGEHELPER DIALOGEX 0, 0, 117, 277
+STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_VISIBLE | WS_CLIPCHILDREN | WS_SYSMENU
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    LTEXT           "Room nouns:",IDC_STATIC1,7,10,49,11
+    LTEXT           "Room conditions:",IDC_STATIC2,7,157,55,11
+    CONTROL         "",IDC_LISTNOUNS,"SysListView32",LVS_REPORT | LVS_EDITLABELS | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,7,27,103,118
+    CONTROL         "",IDC_LISTCONDITIONS,"SysListView32",LVS_REPORT | LVS_EDITLABELS | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,7,170,103,100
+    PUSHBUTTON      "Add noun",IDC_BUTTONADDNOUN,64,7,46,14
+    PUSHBUTTON      "Add cond.",IDC_BUTTONADDCONDITION,64,154,47,14
+END
+
+IDD_MESSAGEEDIT DIALOGEX 0, 0, 499, 118
+STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_VISIBLE | WS_CLIPCHILDREN | WS_SYSMENU
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    EDITTEXT        IDC_EDITMESSAGE,169,7,323,104,ES_MULTILINE | ES_AUTOHSCROLL | ES_WANTRETURN
+    COMBOBOX        IDC_COMBONOUN,58,25,105,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    RTEXT           "Noun:",IDC_STATIC3,7,28,42,8
+    COMBOBOX        IDC_COMBOCONDITION,58,57,105,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    RTEXT           "Condition:",IDC_STATIC6,7,60,42,8
+    COMBOBOX        IDC_COMBOVERB,58,41,105,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    RTEXT           "Verb:",IDC_STATIC7,7,44,42,8
+    RTEXT           "Sequence:",IDC_STATIC8,7,78,42,8
+    COMBOBOX        IDC_COMBOTALKER,58,91,105,30,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    RTEXT           "Talker:",IDC_STATIC9,7,94,42,8
+    CONTROL         "",IDC_SPINSEQ,"msctls_updown32",UDS_ARROWKEYS,148,74,15,14
+    EDITTEXT        IDC_EDITSEQ,58,74,85,14,ES_AUTOHSCROLL | ES_NUMBER
+    PUSHBUTTON      "Add sequence",IDC_BUTTONADDSEQ,58,7,105,14
+    PUSHBUTTON      "Clone",IDC_BUTTONCLONE,7,7,42,14
 END
 
 
@@ -1975,7 +2007,7 @@ BEGIN
     BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 123
-        TOPMARGIN, 7
+        TOPMARGIN, 6
         BOTTOMMARGIN, 278
     END
 
@@ -2023,6 +2055,25 @@ BEGIN
         RIGHTMARGIN, 110
         TOPMARGIN, 7
         BOTTOMMARGIN, 270
+    END
+
+    IDD_MESSAGEHELPER, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 110
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 270
+    END
+
+    IDD_MESSAGEEDIT, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 492
+        VERTGUIDE, 49
+        VERTGUIDE, 58
+        VERTGUIDE, 163
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 111
     END
 END
 #endif    // APSTUDIO_INVOKED
