--- a/SCICompanionLib/SCICompanionLib.vcxproj
+++ b/SCICompanionLib/SCICompanionLib.vcxproj
@@ -214,12 +214,19 @@
     <ClCompile Include="Src\Dialogs\ExtractAllDialog.cpp" />
     <ClCompile Include="Src\Dialogs\PaletteEditorDialog.cpp" />
     <ClCompile Include="Src\Dialogs\PrepareBitmapBase.cpp" />
+    <ClCompile Include="Src\FrameComponents\MessageEditorListCtrl.cpp" />
+    <ClCompile Include="Src\FrameComponents\MessageEditPane.cpp" />
+    <ClCompile Include="Src\FrameComponents\MessageHeaderFile.cpp" />
+    <ClCompile Include="Src\FrameComponents\MessageNounConditionPane.cpp" />
     <ClCompile Include="Src\FrameComponents\MessageSidePane.cpp" />
+    <ClCompile Include="Src\FrameComponents\MessageSource.cpp" />
     <ClCompile Include="Src\FrameComponents\PicHelperPane.cpp" />
     <ClCompile Include="Src\FrameComponents\ZoomCelStatic.cpp" />
+    <ClCompile Include="Src\MFCDocuments\MessageDoc.cpp" />
     <ClCompile Include="Src\MFCDocuments\PaletteDoc.cpp" />
     <ClCompile Include="Src\MFCFrames\MessageChildFrame.cpp" />
     <ClCompile Include="Src\MFCFrames\PaletteChildFrame.cpp" />
+    <ClCompile Include="Src\MFCViews\MessageView.cpp" />
     <ClCompile Include="Src\MFCViews\PaletteView.cpp" />
     <ClCompile Include="Src\Resources\Audio.cpp" />
     <ClCompile Include="Src\Resources\Font.cpp" />
@@ -245,10 +252,17 @@
     <ClInclude Include="Src\Dialogs\DecompileDialog.h" />
     <ClInclude Include="Src\Dialogs\PaletteEditorCommon.h" />
     <ClInclude Include="Src\Dialogs\PaletteEditorDialog.h" />
+    <ClInclude Include="Src\FrameComponents\MessageEditorListCtrl.h" />
+    <ClInclude Include="Src\FrameComponents\MessageEditPane.h" />
+    <ClInclude Include="Src\FrameComponents\MessageHeaderFile.h" />
+    <ClInclude Include="Src\FrameComponents\MessageNounConditionPane.h" />
     <ClInclude Include="Src\FrameComponents\MessageSidePane.h" />
+    <ClInclude Include="Src\FrameComponents\MessageSource.h" />
+    <ClInclude Include="Src\MFCDocuments\MessageDoc.h" />
     <ClInclude Include="Src\MFCDocuments\PaletteDoc.h" />
     <ClInclude Include="Src\MFCFrames\MessageChildFrame.h" />
     <ClInclude Include="Src\MFCFrames\PaletteChildFrame.h" />
+    <ClInclude Include="Src\MFCViews\MessageView.h" />
     <ClInclude Include="Src\MFCViews\PaletteView.h" />
     <ClInclude Include="Src\Resources\Audio.h" />
     <ClInclude Include="Src\Resources\AudioMap.h" />
